--- a/src/sass/pages/_pages-calendar-1.sass
+++ b/src/sass/pages/_pages-calendar-1.sass
@@ -25,7 +25,7 @@
 		&__inner
 			display: flex
 			align-items: center
-			@include scrollbar('x')
+			@include createPerfectScrollbar('x')
 
 		&__month
 			&:not(:last-child)
